# stable_gen_map

./: Cargo.toml  INTERNALS.md  LICENSE  README.md
src/: boxed_slot.rs  cast_key.rs  castable_key.rs  castable_map.rs  clone_gen_map_promise.rs  deref_slot.rs  gen_map.rs  key.rs  key_castable.rs  key_piece.rs  lib.rs  map_id.rs  numeric.rs  paged_stable_gen_map.rs  retype_ptr.rs  slot_item.rs  slot_storage.rs  stable_cast_map.rs  stable_deref_gen_map.rs  stable_deref_map.rs  stable_gen_map.rs  stable_map.rs  stable_paged_gen_map.rs  unsafe_cast_map.rs
src/cast/: cast_key.rs  map_id.rs  mod.rs  stable_cast_map.rs  unsafe_cast_map.rs
src/core/: clone_gen_map_promise.rs  gen_map.rs  mod.rs  slot_storage.rs
src/keys/: key.rs  key_piece.rs  map_id.rs  mod.rs
src/slots/: boxed_slot.rs  deref_slot.rs  mod.rs
src/storage/: boxed_slot.rs
src/tests/: castable_insert_typed_tests.rs  castable_key_macro_tests.rs  castable_key_tests.rs  castable_map.rs  castable_map_tests.rs  castable_pointer_stability_tests.rs  castable_reset_tests.rs  castable_unchecked_tests.rs  custom_inner_key_tests.rs  gen_map_reset_tests.rs  key_castable.rs  key_castable_tests.rs  key_macro_tests.rs  map_id_tests.rs  paged_stable_gen_clone_tests.rs  paged_stable_gen_map_tests.rs  pointer_stability_tests.rs  snapshop_paged_test.rs  snapshot_stable_gen_test.rs  stable_deref_gen_clone_tests.rs  stable_deref_gen_drain_tests.rs  stable_deref_gen_map_overflow_tests.rs  stable_deref_gen_map_tests.rs  stable_deref_gen_retain_tests.rs  stable_deref_gen_snapshot_tests.rs  stable_gen_clone_tests.rs  stable_gen_drain_tests.rs  stable_gen_map_overflow_tests.rs  stable_gen_map_tests.rs  stable_gen_retain_tests.rs  stable_gen_snapshot_tests.rs  stable_paged_gen_clone_tests.rs  stable_paged_gen_map_tests.rs  stable_paged_gen_retain_tests.rs  stable_paged_gen_snapshot_tests.rs  unchecked_tests.rs
src/tests/castable/: castable_insert_typed_tests.rs  castable_key_tests.rs  castable_map_tests.rs  castable_pointer_stability_tests.rs  castable_reset_tests.rs  castable_unchecked_tests.rs  map_id_tests.rs  mod.rs
src/tests/common/: key_macro_tests.rs  mod.rs  pointer_stability_tests.rs  unchecked_tests.rs
src/tests/deref/: mod.rs  (+6 more)
